[workspace]
members = [
  "validate",
  "profile",
  "playground",
  "playground/sys",
  "stats",
  "accelsim",
  "accelsim/trace",
  "accelsim/sim",
  "utils",
  "plot",
  "trace",
  "trace/invoke",
  "trace/model",
  "xtask",
]

[profile.dev]
opt-level = 0 # no optimizations
debug = 2 # full debug info

[profile.dev.package.backtrace]
opt-level = 3

[profile.release]
lto = true
opt-level = 3

[package]
name = "casimu"
version = "0.1.0"
edition = "2021"
publish = false

[features]
default = []
# default = ["python"]
python = ["dep:pyo3"]

[package.metadata.cargo-feature-combinations]
denylist = ["default"]

[dependencies]
color-eyre = "0"
human_bytes = "0"
console = "0"
thiserror = "1"
nvbit-model = "0"
nvbit-io = "0"
regex = "1"
itertools = "0"
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rmp-serde = "1"
log = "0"
once_cell = "1"
bitvec = "1"
strum = { version = "0", features = ["derive"] }
phf = { version = "0.11.1", features = ["macros"] }
rangemap = "1"

# csv = "1"
# dialoguer = "0"

# for vectoradd rust example
num-traits = "0"

trace-model = { path = "./trace/model" }
stats = { path = "./stats" }

[dependencies.pyo3]
version = "0"
features = ["extension-module"]
optional = true

[dev-dependencies]
pretty_assertions_sorted = "1"
cxx = "1"

# sanity check stats against playground
playground = { path = "./playground" }

# testing if ffi works in async contexts
tokio = { version = "1", features = ["full"] }
futures = "0.3"
