[workspace]
members = [
  "validate",
  "profile",
  "playground",
  "playground/sys",
  "stats",
  "accelsim",
  "accelsim/trace",
  "accelsim/sim",
  "utils",
  "plot",
  "trace",
  "trace/invoke",
  "trace/model",
  "xtask",
]

[profile.dev]
opt-level = 0 # no optimizations
debug = 2 # full debug info

[profile.dev.package.backtrace]
opt-level = 3

[profile.release]
# lto just takes too long for now
# lto = true
opt-level = 3
debug = true
# warning: debug assertions negatively impact the performance of accelsim and play
debug-assertions = false

[profile.bench]
# lto = true
# warning: debug assertions negatively impact the performance of accelsim and play
debug-assertions = false
# codegen-units = 10
opt-level = 3
debug = true

[package]
name = "casimu"
version = "0.1.0"
edition = "2021"
publish = false

[features]
# default = ["parking_lot"]
# default = ["stats", "parking_lot", "parallel"]
default = ["stats", "parking_lot"]
stats = []
parallel = []
# parallel = ["dep:rayon"]
parking_lot = []
# default = ["python"]
python = ["dep:pyo3"]

[package.metadata.cargo-feature-combinations]
denylist = ["default"]

[[bench]]
name = "vectoradd"
harness = false

[dependencies]
color-eyre = "0"
human_bytes = "0"
console = "0"
thiserror = "1"
nvbit-model = "0"
nvbit-io = "0"
regex = "1"
itertools = "0"
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rmp-serde = "1"
log = "0"
env_logger = "0"
once_cell = "1"
bitvec = "1"
strum = { version = "0", features = ["derive"] }
phf = { version = "0.11.1", features = ["macros"] }
rangemap = "1"

# synchronization
flume = "0"
crossbeam = "0"
num_cpus = "1"
parking_lot = "0"

# tracing
tracing = "0"
tracing-subscriber = "0"
tracing-chrome = "0"


# parallel
rayon = { version = "1" }
# rayon = { version = "1", optional = true }

similar-asserts = "1"

# log4rs = "0"
# csv = "1"
# dialoguer = "0"
# derive_builder = "0"

# for vectoradd rust example
num-traits = "0"

trace-model = { path = "./trace/model" }
stats = { path = "./stats" }
utils = { path = "./utils" }

[dependencies.pyo3]
version = "0"
features = ["extension-module"]
optional = true

[dev-dependencies]
pretty_assertions_sorted = "1"
# similar-asserts = "1"
cxx = "1"
paste = "1"
criterion = { version = "0.5", features = ["async_tokio"] }

# sanity check stats against playground
playground = { path = "./playground" }
accelsim = { path = "./accelsim" }
accelsim-sim = { path = "./accelsim/sim" }
validate = { path = "./validate" }

# testing if ffi works in async contexts
tokio = { version = "1", features = ["full"] }
async-process = "1"
futures = "0.3"
