[workspace]
members = [
  "validate",
  "profile",
  "playground",
  "playground/sys",
  "exec",
  "exec/impl",
  "stats",
  "benchmarks",
  "accelsim",
  "accelsim/trace",
  "accelsim/sim",
  "utils",
  "plot",
  "trace",
  "trace/invoke",
  "trace/model",
  "xtask",
]

[profile.dev]
opt-level = 0 # no optimizations
debug = 2 # full debug info

[profile.dev.package.backtrace]
opt-level = 3

[profile.release]
# lto just takes too long for now
# lto = true
opt-level = 3
debug = true
# warning: debug assertions negatively impact the performance of accelsim and play
debug-assertions = false

[profile.bench]
# lto = true
# warning: debug assertions negatively impact the performance of accelsim and play
debug-assertions = false
# codegen-units = 10
opt-level = 3
debug = true

[package]
name = "gpucachesim"
version = "0.1.0"
edition = "2021"
publish = false

[features]
default = ["detailed-stats", "parking_lot", "parallel", "deadlock_detection"]
# default = ["detailed-stats", "parking_lot", "parallel"]
# default = ["parking_lot", "parallel", "deadlock_detection"]
deadlock_detection = ["parking_lot/deadlock_detection"]
timings = []
detailed-stats = []
parallel = ["dep:rayon"]
parking_lot = []
python = ["dep:pyo3"]

[package.metadata.cargo-feature-combinations]
denylist = ["default"]

[[bench]]
name = "vectoradd"
harness = false
required-features =  ["parallel"] 

[dependencies]
color-eyre = "0"
human_bytes = "0"
console = "0"
thiserror = "1"
nvbit-model = "0"
nvbit-io = "0"
regex = "1"
itertools = "0"
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rmp-serde = "1"
log = "0"
env_logger = "0"
once_cell = "1"
bitvec = "1"
strum = { version = "0", features = ["derive"] }
phf = { version = "0.11.1", features = ["macros"] }
rangemap = "1"
ndarray = "0"
# serde_json_merge = "0"

# synchronization
flume = "0"
crossbeam = "0"
num_cpus = "1"
parking_lot = { version = "0", features = ["deadlock_detection"] }

# tracing
tracing = "0"
tracing-subscriber = "0"
tracing-chrome = "0"

# parallel simulation
rayon = { version = "1", optional = true }

trace-model = { path = "./trace/model" }
stats = { path = "./stats" }
utils = { path = "./utils" }

# exec driven (todo: make this a feature)
exec = { path = "./exec" }

[dependencies.pyo3]
version = "0"
features = ["extension-module"]
optional = true

[dev-dependencies]
pretty_assertions_sorted = "1"
cxx = "1"
paste = "1"
num-traits = "0"
criterion = { version = "0.5", features = ["async_tokio"] }

# sanity check stats against playground
playground = { path = "./playground" }
accelsim = { path = "./accelsim" }
accelsim-sim = { path = "./accelsim/sim" }
validate = { path = "./validate" }

# testing if ffi works in async contexts
tokio = { version = "1", features = ["full"] }
async-process = "1"
futures = "0.3"
