[package]
name = "accelsim"
version = "0.1.0"
edition = "2021"
default-run = "accelsim-trace"

[lib]
crate-type = ["rlib"]

[[bin]]
name = "accelsim-trace"
path = "src/trace.rs"

[[bin]]
name = "accelsim-sim"
path = "src/sim.rs"

[[bin]]
name = "accelsim-parse"
path = "src/parse.rs"

[features]
default  = []

[package.metadata.cargo-feature-combinations]
denylist = ["default"]

[dependencies]
thiserror = "1"
color-eyre = "0"
dialoguer = "0"
indicatif = "0"
console = "0"
itertools = "0"
csv = "1"
lazy_static = "1"
regex = "1"
rev_buf_reader = "0"
duration-string = "0"
async-process = "1"
clap = { version = "4", features = [ "derive" ] }
tokio = { version = "1", features = ["full"] }
trace-model = { path = "../trace/model" }
utils = { path = "../utils" }

[build-dependencies]
color-eyre = "0"
duct = "0"
reqwest = { version = "0", features = ["blocking"] }
bzip2 = "0.4"
tar = "0.4"
utils = { path = "../utils" }
