[package]
name = "accelsim"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
crate-type = ["rlib"]

[[bin]]
name = "accelsim-parse"

[features]
default  = []

[package.metadata.cargo-feature-combinations]
denylist = ["default"]

[dependencies]
color-eyre = "0"
duct = "0"
itertools = "0"
csv = "1"
glob = "0"
regex = "1"
rev_buf_reader = "0"
duration-string = "0"
clap = { version = "4", features = [ "derive" ] }
