[package]
name = "accelsim"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
crate-type = ["rlib"]

[[bin]]
name = "accelsim-parse"

[features]
default  = []

[package.metadata.cargo-feature-combinations]
denylist = ["default"]

[dependencies]
color-eyre = "0"
duct = "0"
itertools = "0"
regex = "1"
# serde = { verison = "1", features = ["derive"] }
once_cell = "1"
indexmap = { version = "2", features = ["serde"] }
rev_buf_reader = "0"
duration-string = "0"
clap = { version = "4", features = [ "derive" ] }

# trace compat
rmp-serde = "1"
bitvec = "1"
num-traits = "0"
serde_json = "1"
trace-model = { path = "../trace/model" }
nvbit-model = "0"

# stats conversion
stats = { path = "../stats" }
strum = { version = "0", features = ["derive"] }

[dev-dependencies]
similar-asserts = "1"
indoc = "2"
