[package]
name = "exec"
version = "0.1.0"
edition = "2021"

[dependencies]
color-eyre = "0"
thiserror = "1"

serde = { version = "1", features = ["derive"] }

num-traits = "0"
itertools = "0"
bitvec = "1"
petgraph = "0.6"

tokio = { version = "1", features = ["full"] }
futures = "0.3"
async-trait = "0"

trace-model = { path = "../trace/model" }
exec-impl = { path = "./impl" }

# todo: remove in the future
log = "0"
env_logger = "0"

[dev-dependencies]
futures = "0.3"
utils = { path = "../utils" }
