[package]
name = "exec"
version = "0.1.0"
edition = "2021"

[dependencies]
color-eyre = "0"
thiserror = "1"

# for writing out traces
utils = { path = "../utils" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rmp-serde = "1"

num-traits = "0"
itertools = "0"
bitvec = "1"
petgraph = "0.6"
indexmap = "2"

tokio = { version = "1", features = ["full"] }
futures = "0.3"
async-trait = "0"

trace-model = { path = "../trace/model" }
exec-impl = { path = "./impl" }

# todo: remove in the future
log = "0"
env_logger = "0"

[dev-dependencies]
futures = "0.3"
