[package]
name = "exec"
version = "0.1.0"
edition = "2021"
publish = false

[features]
default = ["render"]
render = ["dep:layout-rs", "dep:colorsys", "dep:rand", "dep:rand_chacha"]

[package.metadata.cargo-feature-combinations]
denylist = ["default"]

[dependencies]
color-eyre = "0"
thiserror = "1"

# for writing out traces
utils = { path = "../utils" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rmp-serde = "1"

num-traits = "0"
itertools = "0"
bitvec = "1"
petgraph = "0.6"
indexmap = "2"

tokio = { version = "1", features = ["full"] }
futures = "0.3"
async-trait = "0"

trace-model = { path = "../trace/model" }
exec-derive = { path = "./derive" }

# optional: render control flow graphs
layout-rs = { version = "0.1", optional = true }
colorsys = { version = "0", optional = true }
rand = { version = "0", optional = true }
rand_chacha = { version = "0", optional = true }

# todo: remove in the future
log = "0"
env_logger = "0"

[dev-dependencies]
futures = "0.3"
approx = "0.5"
rand = "0"
ndarray = { version = "0", features = ["approx-0_5"] }
diff = { path = "../diff" }
