[package]
name = "playground"
version = "0.1.0"
edition = "2021"
build = "build.rs"
exclude = [
  # debug bindings file
  "./bindings.rs"
]

[lib]
crate-type = ["rlib"]

[[bin]]
name = "playground"
path = "src/main.rs"

[features]
default = ["parallel"]
parallel = ["cc/parallel"]

[dependencies]
cxx = "1"
accelsim = { path = "../accelsim" }

color-eyre = "0"
thiserror = "1"
clap = { version = "4", features = [ "derive" ] }
dialoguer = "0"
indicatif = "0"
console = "0"

[dev-dependencies]
pretty_assertions = "1"

[build-dependencies]
color-eyre = "0"
bindgen = "0"
glob = "0"
cc = { version = "1", features = [] }
cxx-build = "1"
duct = "0"
