[package]
name = "playground"
version = "0.1.0"
edition = "2021"
publish = false

[features]

[package.metadata.cargo-feature-combinations]
denylist = ["default"]

[dependencies]
cxx = "1"
thiserror = "1"
playground-sys = { path = "./sys" }

# for binary target
color-eyre = "0"
clap = { version = "4", features = [ "derive" ] }
accelsim = { path = "../accelsim" }
stats = { path = "../stats" }
