[package]
name = "plot"
version = "0.1.0"
edition = "2021"

[features]
default  = []

[package.metadata.cargo-feature-combinations]
denylist = ["default"]

[dependencies]
thiserror = "1"
anyhow = "1"
rangemap = "1"
rmp-serde = "1"
serde_json = "1"
nvbit-io = "0"
serde = "1"
clap = { version = "4", features = [ "derive" ] }
plotters = { version = "0.3" }
trace-model = { path = "../trace/model" }
