[package]
name = "profile"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["rlib"]

[features]
default  = []

[package.metadata.cargo-feature-combinations]
denylist = ["default"]

[dependencies]
anyhow = "1"
thiserror = "1"
tempfile = "3"
csv = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
lazy_static = "1"
regex = "1"
tokio = { version = "1", features = ["full"] }
async-process = "1"
