[package]
name = "profile"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
crate-type = ["rlib"]

[features]
default  = []

[package.metadata.cargo-feature-combinations]
denylist = ["default"]

[dependencies]
color-eyre = "0"
thiserror = "1"
tempfile = "3"
which = "4"
csv = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
regex = "1"
log = "0"
tokio = { version = "1", features = ["full"] }
async-process = "1"
once_cell = "1"
clap = { version = "4", features = ["derive", "help"] }

utils = { path = "../utils" }

[dev-dependencies]
pretty_assertions = "1"
