[package]
name = "ptx"
version = "0.1.0"
edition = "2021"

[features]
default  = []
local-data = []

[package.metadata.cargo-feature-combinations]
denylist = ["default", "local-data"]

[dependencies]
color-eyre = "0"
thiserror = "1"
pest = "2"
pest_derive = "2"
pest-ast = "0"
from-pest = "0"
num = "0"
itertools = "0"

object = "0"
bytes = "1"

[lib]
crate-type = ["cdylib", "rlib"]
