[package]
name = "ptx"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default  = []
local-data = []

[package.metadata.cargo-feature-combinations]
denylist = ["default", "local-data"]

[dependencies]
color-eyre = "0"
thiserror = "1"
pest = "2"
pest_derive = "2"
nom = "7"
num = "0"
itertools = "0"

object = "0"
bytes = "1"

clap = { version = "4", features = [ "derive" ] }

[dev-dependencies]
once_cell = "1"
snailquote = "0"
diff = { path = "../diff" }
regex = "1"
