[package]
name = "stats"
version = "0.1.0"
edition = "2021"
publish = false

[features]
default = []

[package.metadata.cargo-feature-combinations]
denylist = ["default"]

[dependencies]
indexmap = { version = "2", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
strum = { version = "0", features = ["derive"] }

[dev-dependencies]
