[package]
name = "stats"
version = "0.1.0"
edition = "2021"
publish = false

[features]
default = ["detailed-stats"]
detailed-stats = []

[package.metadata.cargo-feature-combinations]
denylist = ["default"]

[dependencies]
ndarray = { version = "0", features = ["serde"] }
indexmap = { version = "2", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
strum = { version = "0", features = ["derive"] }

utils = { path = "../utils" }

[dev-dependencies]
