[package]
name = "trace"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[features]
default  = [
  "plot",
  # "full",
]

plot = ["dep:plot"]
full = []

[package.metadata.cargo-feature-combinations]
denylist = ["default"]

[dependencies]
thiserror = "1"
# anyhow = "1"
nvbit-rs = "0"
nvbit-sys = "0"
nvbit-io = "0"
lazy_static = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rmp-serde = "1"
bitvec = "1"
# cuda-runtime-sys = "0.3.0-alpha.1"
rustacuda = "0"

trace-model = { path = "./model" }
utils = { path = "../utils" }

plot = { path = "../plot", optional = true }

[build-dependencies]
nvbit-build = "0"
bindgen = "0"
