[package]
name = "trace"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
crate-type = ["cdylib"]

[features]
default  = ["parallel", "cuda"]
parallel = ["dep:rayon"]
cuda = ["dep:rustacuda", "dep:cuda-driver-sys"]

[package.metadata.cargo-feature-combinations]
denylist = ["default"]

[package.metadata.cargo-feature-combinations.matrix]
need_cuda = true

[dependencies]
thiserror = "1"
nvbit-rs = "0"
nvbit-sys = "0"
nvbit-io = "0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rmp-serde = "1"
bitvec = "1"
once_cell = "1"
log = "0"
env_logger = "0"
indexmap = "2"
console = "0"
clap = { version = "4", features = ["derive"] }

trace-model = { path = "./model" }
utils = { path = "../utils" }

# optional: parallel
rayon = { version = "1", optional = true }

# optional: cuda
rustacuda = { version = "0", optional = true }
cuda-driver-sys = { version = "0", optional = true }

[build-dependencies]
nvbit-build = "0"
bindgen = "0"
