[package]
name = "utils"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
color-eyre = "0"
thiserror = "1"
glob = "0"
async-process = "1"
pathdiff = "0"
libc = "0"

parse-size = { version = "1", features = ["std"] }
human_bytes = "0"

unicode-segmentation = "1"
strip-ansi-escapes = "0"
console = "0"
similar = { version = "2.2.0", features = ["inline"] }
