[package]
name = "validate"
version = "0.1.0"
edition = "2021"
publish = false

[features]
default = ["remote"]
remote = ["dep:ssh_jumper"]

[package.metadata.cargo-feature-combinations]
denylist = ["default"]

[package.metadata.cargo-feature-combinations.matrix]
need_cuda = true

[dependencies]
thiserror = "1"
color-eyre = "0"
tokio = { version = "1", features = ["full"] }
dotenv = "0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0"
handlebars = "4"
shell-words = "1"
indexmap = { version = "2", features = ["serde"] }
clap = { version = "4", features = ["derive"] }
indicatif = "0"
futures = "0.3"
num_cpus = "1"
console = "0"
# itertools = "0"
# once_cell = "1"

utils = { path = "../utils" }
# invoke-trace = { path = "../trace/invoke" }
profile = { path = "../profile" }
# accelsim = { path = "../accelsim" }
# trace-model = { path = "../trace/model" }

ssh_jumper = { version = "0", optional = true }

[dev-dependencies]
pretty_assertions = "1"
