[package]
name = "validate"
version = "0.1.0"
edition = "2021"
publish = false

[features]
default = ["remote"]
remote = ["dep:ssh_jumper"]

[package.metadata.cargo-feature-combinations]
denylist = ["default"]

[package.metadata.cargo-feature-combinations.matrix]
need_cuda = true
need_accelsim_build_dependencies = true

[dependencies]
thiserror = "1"
color-eyre = "0"
tokio = { version = "1", features = ["full"] }
dotenv = "0"
serde = { version = "1", features = ["derive"] }
csv = "1"
serde_json = { version = "1", features = ["preserve_order"] }
serde_yaml = "0"
duration-string = { version = "0", features = ["serde"] }
log = "0"
env_logger = "0"
handlebars = "4"
shell-words = "1"
indexmap = { version = "2", features = ["serde"] }
clap = { version = "4", features = ["derive"] }
indicatif = "0"
futures = "0.3"
num_cpus = "1"
console = "0"
pathdiff = "0"
smart-default = "0"
chrono = "0"
once_cell = "1"
async-process = "1"
strum = { version = "0", features = ["derive"] }

utils = { path = "../utils" }

# trace
invoke-trace = { path = "../trace/invoke" }

# profile
profile = { path = "../profile" }

# accelsim trace
accelsim-trace = { path = "../accelsim/trace" }

# accelsim simulate
accelsim-sim = { path = "../accelsim/sim" }
accelsim = { path = "../accelsim" }

# playground simulate
playground = { path = "../playground" }

# simulate
casimu = { path = "../" }
stats = { path = "../stats" }

# optional dependencies
ssh_jumper = { version = "0", optional = true }

[dev-dependencies]
pretty_assertions_sorted = "1"
