[package]
name = "xtask"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
color-eyre = "0"
duct = "0"
glob = "0"
difflib = "0"
indicatif = "0"
num_cpus = "1"
chrono = "0"
rayon = "1"
itertools = "0"
bitvec = "1"

serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["preserve_order"] }
serde_yaml = "0"
rmp-serde = "1"

clap = { version = "4", features = ["derive"] }

utils = { path = "../utils" }
gpucachesim = { path = "../" }
accelsim = { path = "../accelsim" }
trace-model = { path = "../trace/model" }
