[package]
name = "accelsim-sim"
version = "0.1.0"
edition = "2021"
publish = false

[features]
default = []
upstream = []

[package.metadata.cargo-feature-combinations]
denylist = ["default"]

[package.metadata.cargo-feature-combinations.matrix]
need_cuda = true
need_accelsim_build_dependencies = true

[dependencies]
color-eyre = "0"
async-process = "1"
log = "0"
env_logger = "0"
clap = { version = "4", features = [ "derive" ] }
tokio = { version = "1", features = ["full"] }

accelsim = { path = "../" }
utils = { path = "../../utils" }

[build-dependencies]
color-eyre = "0"
duct = "0"
accelsim = { path = "../" }
utils = { path = "../../utils" }
