[package]
name = "accelsim-sim"
version = "0.1.0"
edition = "2021"
publish = false

[features]
default = ["upstream"]
upstream = []

[package.metadata.cargo-feature-combinations]
denylist = ["default"]

[package.metadata.cargo-feature-combinations.matrix]
need_cuda = true
need_accelsim_build_dependencies = true

[dependencies]
tokio = { version = "1", features = ["full"] }
async-process = "1"
futures = "0.3"

color-eyre = "0"
log = "0"

serde_json = "1"
env_logger = "0"
clap = { version = "4", features = [ "derive" ] }

accelsim = { path = "../" }
utils = { path = "../../utils" }

# stats conversion
stats = { path = "../../stats" }

[build-dependencies]
color-eyre = "0"
duct = "0"
accelsim = { path = "../" }
utils = { path = "../../utils" }
