[package]
name = "accelsim-trace"
version = "0.1.0"
edition = "2021"
publish = false

[features]
default = []
upstream = []

[package.metadata.cargo-feature-combinations]
denylist = ["default"]

[package.metadata.cargo-feature-combinations.matrix]
need_cuda = true

[dependencies]
color-eyre = "0"
dialoguer = "0"
console = "0"
log = "0"
env_logger = "0"
once_cell = "1"
async-process = "1"
tempfile = "3"
tokio = { version = "1", features = ["full"] }
clap = { version = "4", features = ["derive"] }

trace-model = { path = "../../trace/model" }
accelsim = { path = "../" }
utils = { path = "../../utils" }

[build-dependencies]
color-eyre = "0"
thiserror = "1"
duct = "0"
reqwest = { version = "0", features = ["blocking", "rustls-tls"] }
bzip2 = "0.4"
tar = "0.4"

accelsim = { path = "../" }
utils = { path = "../../utils" }
