[package]
name = "invoke-trace"
version = "0.1.0"
edition = "2021"
publish = false

[features]
default  = []

[package.metadata.cargo-feature-combinations]
denylist = ["default"]

[package.metadata.cargo-feature-combinations.matrix]
need_cuda = true

[dependencies]
color-eyre = "0"
thiserror = "1"
tokio = { version = "1", features = ["full"] }
async-process = "1"

trace = { path = "../" }
