[package]
name = "invoke-trace"
version = "0.1.0"
edition = "2021"
publish = false

[features]
default  = []

[package.metadata.cargo-feature-combinations]
denylist = ["default"]

[package.metadata.cargo-feature-combinations.matrix]
need_cuda = true

[dependencies]
color-eyre = "0"
thiserror = "1"
async-process = "1"
log = "0"
tokio = { version = "1", features = ["full"] }
clap = { version = "4", features = ["derive"] }
# futures = "0.3"
# duct = "0"

trace = { path = "../" }
utils = { path = "../../utils" }
