[package]
name = "trace-model"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
serde = { version = "1", features = ["derive"] }
indexmap = { version = "2", features = ["serde"] }
nvbit-model = "0"
itertools = "0"
thiserror = "1"
once_cell = "1"
regex = "1"

# it would be nice of bitvec to re-export funty::Integral
bitvec = "1"
funty = "2"

[dev-dependencies]
similar-asserts = "1"
