[package]
name = "remote"
version = "0.1.0"
edition = "2021"

[dependencies]
dotenv = "0"
color-eyre = "0"
thiserror = "1"
log = "0"
env_logger = "0"
itertools = "0"
strum = { version = "0", features = ["derive"] }

clap = { version = "4", features = ["derive"] }
# ssh = "0"
ssh2 = "0"
# ssh_jumper = "0"
# async-ssh2-lite = { version = "0" }
# async-ssh2-lite = { version = "0", features = ["tokio"] }

async-ssh2-lite = { version = "0.4.6",  features = ["tokio"] }
async-trait = "0"
tokio = { version = "1", features = ["full"] }
futures = "0.3"
